--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="benefit">
                 <h3 class="accented">Fast!</h3>
-                <p>I will design and develop your website through 100% code - no unnecessary extensions or plugins and other tools that might slow down your website’s loading speed and affect your searchability.</p>
+                <p>No unnecessary extensions or tools that might slow down your website’s loading speed and affect your searchability and user satisfaction.</p>
             </div>
             <div class="benefit">
                 <h3 class="accented">Free Audit</h3>
