added open grapht ags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Websites For Local Businesses | Hart Pableo">
+    <meta property="og:description" content="I design and build fast and quality websites for local businesses and make them more visible or accessible to their target market.">
+    <meta property="og:image" content="og-image.jpg"> 
     <title>Websites For Local Businesses | Hart Pableo Web Development</title>
     <link rel="shortcut icon" href="images/hart-favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
